--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<script src = "scripts/main.js" defer> </script>
-		<link
+		<!-- <link
   			href="https://fonts.googleapis.com/css?family=Open+Sans"
-  			rel="stylesheet" />
+  			rel="stylesheet" /> -->
   		<link href = "styles/style.css" rel = "stylesheet" />
 		<meta charset = "utf-8" />
 		<title>My Test Page</title>
